--- a/index.html
+++ b/index.html
@@ -21,18 +21,15 @@
   <!-- Favicon -->
   <link rel="icon" href="images/solix-logo-icon-512.png" type="image/png" sizes="512x512" />
 
-  <!-- Preload header logo to avoid flicker and 404 cache ghosts -->
-  <link rel="preload" as="image" href="images/solix-logo-standard.png" />
-  
   <!-- Site CSS -->
-  <link rel="stylesheet" href="css/style.css?v=20250929-9" />
+  <link rel="stylesheet" href="css/style.css?v=20251003-6" />
 </head>
 <body class="font-inter text-slate-800 bg-white">
   <!-- Fixed Header -->
   <header id="navbar" class="site-header" role="navigation" aria-label="Primary" style="backdrop-filter:none;background:#fff;overflow:visible;">
     <div class="container mx-auto px-4 flex items-center justify-between gap-4" style="max-width:1280px;">
       <a href="#home" class="flex items-center gap-3 shrink-0 brand-wrap" aria-label="Solix International — Home" style="margin-right:auto;">
-        <img id="site-logo" src="images/solix-logo-standard.png" data-preferred="images/solix-logo-header.png" alt="Solix International" class="site-logo" loading="eager" decoding="sync" onerror="this.onerror=null; this.src='images/solix-logo.png';" />
+        <img id="site-logo" src="images/solix-logo-light.png?v=20251003-8" alt="Solix International" class="site-logo-compact" loading="eager" decoding="sync" />
       </a>
 
       <!-- Desktop Nav -->
@@ -507,7 +504,7 @@
   </footer>
 
   <!-- JS -->
-  <script src="js/main.js?v=20250929-7" defer></script>
-  <script src="js/utils.js?v=20250930-3" defer></script>
+  <script src="js/main.js?v=20251003-8" defer></script>
+  <script src="js/utils.js?v=20251003-1" defer></script>
 </body>
 </html>
