--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=Playfair+Display:wght@400;600;700&display=swap" rel="stylesheet" />
 
-  <!-- EmailJS -->
-  <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
+
 
   <!-- Favicon -->
   <link rel="icon" href="images/solix-logo-icon-512.png" type="image/png" sizes="512x512" />
@@ -29,7 +28,7 @@
   <header id="navbar" class="site-header" role="navigation" aria-label="Primary" style="backdrop-filter:none;background:#fff;overflow:visible;">
     <div class="container mx-auto px-4 flex items-center justify-between gap-4" style="max-width:1280px;">
       <a href="#home" class="flex items-center gap-3 shrink-0 brand-wrap" aria-label="Solix International — Home" style="margin-right:auto;">
-        <img id="site-logo" src="images/solix-logo-light.png?v=20251003-8" alt="Solix International" class="site-logo-compact" loading="eager" decoding="sync" />
+        <img id="site-logo" src="images/solix-logo-cropped.png" alt="Solix International" class="site-logo-compact" loading="eager" decoding="sync" />
       </a>
 
       <!-- Desktop Nav -->
@@ -250,7 +249,12 @@
         <p class="mt-3 text-lg text-slate-600">Tell us about your project and preferred specifications.</p>
       </div>
       <div class="bg-white border rounded-2xl p-6 md:p-8 shadow-sm">
-        <form id="quote-form" class="space-y-6">
+        <form action="https://formsubmit.co/Info@solix-int.com" method="POST" class="space-y-6">
+          <!-- FormSubmit Configuration -->
+          <input type="hidden" name="_next" value="https://solix-int.com/thank-you.html" />
+          <input type="hidden" name="_subject" value="New Quote Request from Solix Website" />
+          <input type="hidden" name="_captcha" value="false" />
+          <input type="hidden" name="_template" value="table" />>
           <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
             <div>
               <label class="form-label" for="company">Company *</label>
@@ -422,7 +426,11 @@
         </div>
         <div class="bg-white border rounded-2xl p-6 shadow-sm">
           <h3 class="font-semibold text-xl mb-4">Send Message</h3>
-          <form id="contact-form" class="space-y-4">
+          <form action="https://formsubmit.co/Info@solix-int.com" method="POST" class="space-y-4">
+            <!-- FormSubmit Configuration -->
+            <input type="hidden" name="_next" value="https://solix-int.com/thank-you.html" />
+            <input type="hidden" name="_subject" value="New Contact from Solix Website" />
+            <input type="hidden" name="_captcha" value="false" />>
             <div>
               <label class="form-label" for="name">Name *</label>
               <input class="form-input" type="text" id="name" name="name" required />
@@ -504,7 +512,7 @@
   </footer>
 
   <!-- JS -->
-  <script src="js/main.js?v=20251003-8" defer></script>
-  <script src="js/utils.js?v=20251003-1" defer></script>
+  <script src="js/main-simple.js" defer></script>
+  <script src="js/utils.js" defer></script>
 </body>
 </html>
