--- a/index.html
+++ b/index.html
@@ -251,10 +251,11 @@
       <div class="bg-white border rounded-2xl p-6 md:p-8 shadow-sm">
         <form action="https://formsubmit.co/Info@solix-int.com" method="POST" class="space-y-6">
           <!-- FormSubmit Configuration -->
-          <input type="hidden" name="_next" value="https://solix-int.com/thank-you.html" />
+          <input type="hidden" name="_next" value="https://bshalaby2346.github.io/solix-int-site/#quote" />
           <input type="hidden" name="_subject" value="New Quote Request from Solix Website" />
           <input type="hidden" name="_captcha" value="false" />
-          <input type="hidden" name="_template" value="table" />>
+          <input type="hidden" name="_template" value="table" />
+          <input type="hidden" name="_message" value="Thank you! Your quote request has been submitted successfully. We'll respond within 24 hours." />
           <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
             <div>
               <label class="form-label" for="company">Company *</label>
@@ -317,7 +318,7 @@
             </div>
             <div>
               <label class="form-label" for="quantity">Quantity (Tons) *</label>
-              <input class="form-input" type="number" id="quantity" name="quantity" min="1" max="7000000" required />
+              <input class="form-input" type="number" id="quantity" name="quantity" min="1" required />
             </div>
           </div>
           <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
@@ -428,7 +429,7 @@
           <h3 class="font-semibold text-xl mb-4">Send Message</h3>
           <form action="https://formsubmit.co/Info@solix-int.com" method="POST" class="space-y-4">
             <!-- FormSubmit Configuration -->
-            <input type="hidden" name="_next" value="https://solix-int.com/thank-you.html" />
+            <input type="hidden" name="_next" value="https://bshalaby2346.github.io/solix-int-site/#contact" />
             <input type="hidden" name="_subject" value="New Contact from Solix Website" />
             <input type="hidden" name="_captcha" value="false" />>
             <div>
