--- a/index-snapshot-2025-09-30.html
+++ b/index-snapshot-2025-09-30.html
@@ -15,18 +15,24 @@
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=Playfair+Display:wght@400;600;700&display=swap" rel="stylesheet" />
 
+  <!-- EmailJS -->
+  <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
+
   <!-- Favicon -->
   <link rel="icon" href="images/solix-logo-icon-512.png" type="image/png" sizes="512x512" />
 
+  <!-- Preload header logo to avoid flicker and 404 cache ghosts -->
+  <link rel="preload" as="image" href="images/solix-logo-standard.png" />
+  
   <!-- Site CSS -->
-  <link rel="stylesheet" href="css/style.css?v=20251003-6" />
+  <link rel="stylesheet" href="css/style.css?v=20250929-9" />
 </head>
 <body class="font-inter text-slate-800 bg-white">
   <!-- Fixed Header -->
   <header id="navbar" class="site-header" role="navigation" aria-label="Primary" style="backdrop-filter:none;background:#fff;overflow:visible;">
     <div class="container mx-auto px-4 flex items-center justify-between gap-4" style="max-width:1280px;">
       <a href="#home" class="flex items-center gap-3 shrink-0 brand-wrap" aria-label="Solix International — Home" style="margin-right:auto;">
-        <img id="site-logo" src="images/solix-logo-light.png?v=20251003-8" alt="Solix International" class="site-logo-compact" loading="eager" decoding="sync" />
+        <img id="site-logo" src="images/solix-logo-standard.png" data-preferred="images/solix-logo-header.png" alt="Solix International" class="site-logo" loading="eager" decoding="sync" onerror="this.onerror=null; this.src='images/solix-logo.png';" />
       </a>
 
       <!-- Desktop Nav -->
@@ -79,11 +85,11 @@
           Every shipment is inspected to international standards (ASTM, CE) with SGS contracted for pre‑departure certification. Whether bulk, silo, jumbo bags, or retail packaging, we match product and logistics to your site plan—so materials arrive exactly when the program calls for them.
         </p>
         <div class="hero-actions mt-3 flex flex-col sm:flex-row items-center justify-center gap-3">
-          <a href="#quote" class="inline-flex items-center gap-2 px-6 py-3 rounded-xl text-white shadow btn-primary">
+          <a href="#quote" class="inline-flex items-center gap-2 px-6 py-3 rounded-xl text-white bg-gradient-to-r from-sky-600 to-blue-700 hover:from-sky-700 hover:to-blue-800 shadow">
             <i class="fas fa-calculator"></i>
             Request Quote
           </a>
-          <a href="#capabilities" class="inline-flex items-center gap-2 px-6 py-3 rounded-xl text-white shadow btn-orange">
+          <a href="#capabilities" class="inline-flex items-center gap-2 px-6 py-3 rounded-xl text-white bg-orange-500 hover:bg-orange-600 shadow">
             <i class="fas fa-truck"></i>
             Our Capabilities
           </a>
@@ -160,7 +166,7 @@
         <p class="mt-3 text-lg text-slate-600">High‑quality cement and gypsum meeting ASTM and European CE standards with SGS certification.</p>
       </div>
       <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
-        <div class="bg-white border rounded-2xl p-8 shadow-sm card">
+        <div class="bg-white border rounded-2xl p-8 shadow-sm">
           <img src="images/cement-types.jpg" alt="Different types of cement" class="w-full h-28 object-cover rounded-xl mb-4" loading="lazy" decoding="async" />
           <h3 class="text-2xl font-playfair font-bold mb-2">Cement</h3>
           <p class="text-slate-600 mb-4">ASTM and CE certified grades with SGS inspection on every shipment. Up to 7M tons per project.</p>
@@ -170,7 +176,7 @@
             <li>OPC 42.5 / 52.5</li>
           </ul>
         </div>
-        <div class="bg-white border rounded-2xl p-8 shadow-sm card">
+        <div class="bg-white border rounded-2xl p-8 shadow-sm">
           <img src="images/gypsum.jpg" alt="Raw gypsum rock" class="w-full h-28 object-cover rounded-xl mb-4" loading="lazy" decoding="async" />
           <h3 class="text-2xl font-playfair font-bold mb-2">Gypsum</h3>
           <p class="text-slate-600 mb-4">Premium grade materials with SGS quality certification and competitive pricing.</p>
@@ -184,8 +190,6 @@
     </div>
   </section>
 
-  <div class="section-divider-line"></div>
-
   <!-- Capabilities -->
   <section id="capabilities" class="py-16 bg-white">
     <div class="container mx-auto px-4 max-w-6xl">
@@ -195,32 +199,32 @@
       </div>
       <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
         <div class="text-center p-6 bg-slate-50 rounded-xl">
-          <img src="images/thumbs/certificate.jpg" alt="Certified supply chain" class="w-full h-28 object-cover rounded-xl mb-4" loading="lazy" decoding="async" />
+          <div class="w-16 h-16 mx-auto rounded-2xl bg-sky-100 text-sky-600 flex items-center justify-center mb-4"><i class="fas fa-handshake text-2xl"></i></div>
           <h3 class="font-semibold text-xl">Certified Supply Chain</h3>
           <p class="text-slate-600">Redundant sourcing across Egypt and UAE with SGS audits and pre‑departure inspection.</p>
         </div>
         <div class="text-center p-6 bg-slate-50 rounded-xl">
-          <img src="images/thumbs/logistics.jpg" alt="Priority logistics (cargo shipping)" class="w-full h-28 object-cover rounded-xl mb-4" loading="lazy" decoding="async" />
+          <div class="w-16 h-16 mx-auto rounded-2xl bg-sky-100 text-sky-600 flex items-center justify-center mb-4"><i class="fas fa-truck text-2xl"></i></div>
           <h3 class="font-semibold text-xl">Priority Logistics</h3>
           <p class="text-slate-600">Optimized routing and scheduling at scale with port, silo, and inland handling.</p>
         </div>
         <div class="text-center p-6 bg-slate-50 rounded-xl">
-          <img src="images/thumbs/globe.jpg" alt="Global reach" class="w-full h-28 object-cover rounded-xl mb-4" loading="lazy" decoding="async" />
+          <div class="w-16 h-16 mx-auto rounded-2xl bg-sky-100 text-sky-600 flex items-center justify-center mb-4"><i class="fas fa-globe-americas text-2xl"></i></div>
           <h3 class="font-semibold text-xl">Global Reach</h3>
           <p class="text-slate-600">Middle East, United States, United Kingdom, and Europe.</p>
         </div>
         <div class="text-center p-6 bg-slate-50 rounded-xl">
-          <img src="images/thumbs/standards.jpg" alt="Standards & grades (ASTM / CE)" class="w-full h-28 object-cover rounded-xl mb-4" loading="lazy" decoding="async" />
+          <div class="w-16 h-16 mx-auto rounded-2xl bg-sky-100 text-sky-600 flex items-center justify-center mb-4"><i class="fas fa-cubes text-2xl"></i></div>
           <h3 class="font-semibold text-xl">Standards & Grades</h3>
           <p class="text-slate-600">ASTM 150 I–V, CE 42.5 N/R, OPC 42.5/52.5 with consistent SGS certification.</p>
         </div>
         <div class="text-center p-6 bg-slate-50 rounded-xl">
-          <img src="images/thumbs/packaging.jpg" alt="Packaging & handling" class="w-full h-28 object-cover rounded-xl mb-4" loading="lazy" decoding="async" />
+          <div class="w-16 h-16 mx-auto rounded-2xl bg-sky-100 text-sky-600 flex items-center justify-center mb-4"><i class="fas fa-warehouse text-2xl"></i></div>
           <h3 class="font-semibold text-xl">Packaging & Handling</h3>
           <p class="text-slate-600">Bulk, 1.5T jumbo, 50kg retail; silo loading and mixed configurations on request.</p>
         </div>
         <div class="text-center p-6 bg-slate-50 rounded-xl">
-          <img src="images/thumbs/compliance.jpg" alt="Compliance & QA" class="w-full h-28 object-cover rounded-xl mb-4" loading="lazy" decoding="async" />
+          <div class="w-16 h-16 mx-auto rounded-2xl bg-sky-100 text-sky-600 flex items-center justify-center mb-4"><i class="fas fa-shield-alt text-2xl"></i></div>
           <h3 class="font-semibold text-xl">Compliance & QA</h3>
           <p class="text-slate-600">Documented traceability, pre‑shipment inspection, and on‑spec delivery assurance.</p>
         </div>
@@ -237,8 +241,6 @@
     </div>
   </section>
 
-  <div class="section-divider-line"></div>
-
   <!-- Quote -->
   <section id="quote" class="py-16 bg-slate-50">
     <div class="container mx-auto px-4 max-w-6xl">
@@ -247,12 +249,7 @@
         <p class="mt-3 text-lg text-slate-600">Tell us about your project and preferred specifications.</p>
       </div>
       <div class="bg-white border rounded-2xl p-6 md:p-8 shadow-sm">
-        <form action="https://formsubmit.co/info@solix-int.com" method="POST" id="quote-form" class="space-y-6">
-          <input type="hidden" name="_subject" value="New Quote Request from Solix Website">
-          <input type="hidden" name="_next" value="https://www.solix-int.com#quote-success">
-          <input type="hidden" name="_captcha" value="false">
-          <input type="hidden" name="_template" value="table">
-          
+        <form id="quote-form" class="space-y-6">
           <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
             <div>
               <label class="form-label" for="company">Company *</label>
@@ -369,7 +366,7 @@
             <textarea class="form-input min-h-[120px]" id="notes" name="notes" placeholder="Certifications, delivery terms (FOB/CIF/CFR/EXW/DDP), special requirements..."></textarea>
           </div>
           <div class="text-center">
-            <button type="submit" class="inline-flex items-center gap-2 px-6 py-3 rounded-xl text-white shadow btn-primary">
+            <button type="submit" class="inline-flex items-center gap-2 px-6 py-3 rounded-xl text-white bg-gradient-to-r from-sky-600 to-blue-700 hover:from-sky-700 hover:to-blue-800 shadow">
               <i class="fas fa-paper-plane"></i>
               Submit Quote Request
             </button>
@@ -379,13 +376,11 @@
           <div class="inline-flex items-center justify-center w-14 h-14 rounded-full bg-green-100 text-green-700 mb-3">
             <i class="fas fa-check text-2xl"></i>
           </div>
-          <p class="text-slate-700">Quote request submitted. We'll respond within 24 hours.</p>
+          <p class="text-slate-700">Quote request submitted. We’ll respond within 24 hours.</p>
         </div>
       </div>
     </div>
   </section>
-
-  <div class="section-divider-line"></div>
 
   <!-- Contact -->
   <section id="contact" class="py-16 bg-white">
@@ -398,7 +393,7 @@
         <div class="space-y-6">
           <div class="p-6 rounded-2xl bg-gradient-to-br from-sky-50 to-sky-100">
             <div class="flex gap-3 items-start">
-              <img src="images/flags/uae.png" alt="Flag of the United Arab Emirates" class="w-10 h-10 rounded object-cover ring-2 ring-white shadow" loading="lazy" decoding="async" />
+              <div class="w-10 h-10 rounded-lg bg-sky-600 text-white flex items-center justify-center"><i class="fas fa-building"></i></div>
               <div>
                 <h3 class="font-semibold text-xl">United Arab Emirates</h3>
                 <p class="text-slate-600">Ajman Free Zone — Office C1 – 1F – SF4755</p>
@@ -407,7 +402,7 @@
           </div>
           <div class="p-6 rounded-2xl bg-gradient-to-br from-amber-50 to-orange-100">
             <div class="flex gap-3 items-start">
-              <img src="images/flags/egypt.png" alt="Flag of Egypt" class="w-10 h-10 rounded object-cover ring-2 ring-white shadow" loading="lazy" decoding="async" />
+              <div class="w-10 h-10 rounded-lg bg-amber-600 text-white flex items-center justify-center"><i class="fas fa-building"></i></div>
               <div>
                 <h3 class="font-semibold text-xl">Egypt</h3>
                 <p class="text-slate-600">Sheikh Zayed, Rawdat Al Mohandseen, Building 60, Apt 3</p>
@@ -417,19 +412,14 @@
           <div class="p-6 rounded-2xl bg-slate-50">
             <h3 class="font-semibold text-xl mb-3">Get In Touch</h3>
             <div class="space-y-2">
-              <div class="flex items-center gap-3"><i class="fas fa-envelope text-sky-600"></i><a class="link" href="mailto:Info@solix-Int.com">Info@solix-Int.com</a></div>
+              <div class="flex items-center gap-3"><i class="fas fa-envelope text-sky-600"></i><a class="link" href="mailto:Info@solixtrd.com">Info@solixtrd.com</a></div>
               <div class="flex items-center gap-3"><i class="fas fa-clock text-sky-600"></i><span>8:00–18:00 (Local Time)</span></div>
             </div>
           </div>
         </div>
         <div class="bg-white border rounded-2xl p-6 shadow-sm">
           <h3 class="font-semibold text-xl mb-4">Send Message</h3>
-          <form action="https://formsubmit.co/info@solix-int.com" method="POST" id="contact-form" class="space-y-4">
-            <input type="hidden" name="_subject" value="Website Contact Message from Solix">
-            <input type="hidden" name="_next" value="https://www.solix-int.com#contact-success">
-            <input type="hidden" name="_captcha" value="false">
-            <input type="hidden" name="_template" value="table">
-            
+          <form id="contact-form" class="space-y-4">
             <div>
               <label class="form-label" for="name">Name *</label>
               <input class="form-input" type="text" id="name" name="name" required />
@@ -447,7 +437,7 @@
               <textarea class="form-input min-h-[120px]" id="message" name="message" required></textarea>
             </div>
             <div class="text-center">
-              <button type="submit" class="inline-flex items-center gap-2 px-6 py-3 rounded-xl text-white shadow btn-primary">
+              <button type="submit" class="inline-flex items-center gap-2 px-6 py-3 rounded-xl text-white bg-gradient-to-r from-sky-600 to-blue-700 hover:from-sky-700 hover:to-blue-800 shadow">
                 <i class="fas fa-paper-plane"></i>
                 Send Message
               </button>
@@ -455,7 +445,7 @@
           </form>
           <div id="contact-success" class="hidden text-center py-6">
             <div class="inline-flex items-center justify-center w-12 h-12 rounded-full bg-green-100 text-green-700 mb-3"><i class="fas fa-check"></i></div>
-            <p class="text-slate-700">Message sent. We'll get back to you shortly.</p>
+            <p class="text-slate-700">Message sent. We’ll get back to you shortly.</p>
           </div>
         </div>
       </div>
@@ -498,20 +488,18 @@
         <div>
           <h5 class="font-semibold text-white mb-3">Contact</h5>
           <div class="space-y-2">
-            <div class="flex items-center gap-2"><i class="fas fa-envelope text-sky-400 text-sm"></i><a class="link" href="mailto:Info@solix-Int.com">Info@solix-Int.com</a></div>
+            <div class="flex items-center gap-2"><i class="fas fa-envelope text-sky-400 text-sm"></i><a class="link" href="mailto:Info@solixtrd.com">Info@solixtrd.com</a></div>
             <div class="flex items-start gap-2"><i class="fas fa-map-marker-alt text-sky-400 text-sm mt-1"></i><div>UAE: Ajman Free Zone<br/>Egypt: Sheikh Zayed</div></div>
-                <div class="flex items-center gap-2"><i class="fas fa-globe text-sky-400 text-sm"></i><a class="link" href="https://www.solix-int.com" target="_blank" rel="noopener">Solix-Int.com</a></div>
           </div>
         </div>
       </div>
       <div class="border-t border-slate-800 mt-8 pt-6 text-center text-slate-500">
-        &copy; 2024 Solix International. All rights reserved. &bull; <a class="link" href="https://www.solix-int.com" target="_blank" rel="noopener">Solix-Int.com</a>
+        &copy; 2024 Solix International. All rights reserved.
       </div>
     </div>
   </footer>
 
   <!-- JS -->
-  <script src="js/main.js?v=20251003-8" defer></script>
-  <script src="js/utils.js?v=20251003-1" defer></script>
+  <script src="js/main.js?v=20250929-7" defer></script>
 </body>
 </html>
