--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             <div class="w-12 h-12 rounded-xl bg-sky-100 flex items-center justify-center"><i class="fas fa-ship text-sky-600"></i></div>
             <div>
               <h3 class="font-semibold text-xl">Strategic Infrastructure</h3>
-              <p class="text-slate-600">Leased space acquisition at Tilbury port silos to enhance European distribution.</p>
+              <p class="text-slate-600">Leased space acquisition pending at UK port silos to enhance European distribution.</p>
             </div>
           </div>
         </div>
