Revert to origin Tilbury

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=Playfair+Display:wght@400;600;700&display=swap" rel="stylesheet" />
 
+
+
   <!-- Favicon -->
   <link rel="icon" href="images/solix-logo-icon-512.png" type="image/png" sizes="512x512" />
 
@@ -26,7 +28,7 @@
   <header id="navbar" class="site-header" role="navigation" aria-label="Primary" style="backdrop-filter:none;background:#fff;overflow:visible;">
     <div class="container mx-auto px-4 flex items-center justify-between gap-4" style="max-width:1280px;">
       <a href="#home" class="flex items-center gap-3 shrink-0 brand-wrap" aria-label="Solix International — Home" style="margin-right:auto;">
-        <img id="site-logo" src="images/solix-logo-light.png?v=20251003-8" alt="Solix International" class="site-logo-compact" loading="eager" decoding="sync" />
+        <img id="site-logo" src="images/solix-logo-cropped.png" alt="Solix International" class="site-logo-compact" loading="eager" decoding="sync" />
       </a>
 
       <!-- Desktop Nav -->
@@ -135,7 +137,7 @@
             <div class="w-12 h-12 rounded-xl bg-sky-100 flex items-center justify-center"><i class="fas fa-ship text-sky-600"></i></div>
             <div>
               <h3 class="font-semibold text-xl">Strategic Infrastructure</h3>
-              <p class="text-slate-600">Leased space acquisition pending at UK port silos to enhance European distribution.</p>
+              <p class="text-slate-600">Leased space acquisition at Tilbury port silos to enhance European distribution.</p>
             </div>
           </div>
         </div>
@@ -247,12 +249,13 @@
         <p class="mt-3 text-lg text-slate-600">Tell us about your project and preferred specifications.</p>
       </div>
       <div class="bg-white border rounded-2xl p-6 md:p-8 shadow-sm">
-        <form action="https://formsubmit.co/info@solix-int.com" method="POST" id="quote-form" class="space-y-6">
-          <input type="hidden" name="_subject" value="New Quote Request from Solix Website">
-          <input type="hidden" name="_next" value="https://www.solix-int.com#quote-success">
-          <input type="hidden" name="_captcha" value="false">
-          <input type="hidden" name="_template" value="table">
-          
+        <form action="https://formsubmit.co/Info@solix-int.com" method="POST" class="space-y-6">
+          <!-- FormSubmit Configuration -->
+          <input type="hidden" name="_next" value="https://bshalaby2346.github.io/solix-int-site/#quote" />
+          <input type="hidden" name="_subject" value="New Quote Request from Solix Website" />
+          <input type="hidden" name="_captcha" value="false" />
+          <input type="hidden" name="_template" value="table" />
+          <input type="hidden" name="_message" value="Thank you! Your quote request has been submitted successfully. We'll respond within 24 hours." />
           <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
             <div>
               <label class="form-label" for="company">Company *</label>
@@ -315,7 +318,7 @@
             </div>
             <div>
               <label class="form-label" for="quantity">Quantity (Tons) *</label>
-              <input class="form-input" type="number" id="quantity" name="quantity" min="1" max="7000000" required />
+              <input class="form-input" type="number" id="quantity" name="quantity" min="1" required />
             </div>
           </div>
           <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
@@ -379,7 +382,7 @@
           <div class="inline-flex items-center justify-center w-14 h-14 rounded-full bg-green-100 text-green-700 mb-3">
             <i class="fas fa-check text-2xl"></i>
           </div>
-          <p class="text-slate-700">Quote request submitted. We'll respond within 24 hours.</p>
+          <p class="text-slate-700">Quote request submitted. We’ll respond within 24 hours.</p>
         </div>
       </div>
     </div>
@@ -424,12 +427,11 @@
         </div>
         <div class="bg-white border rounded-2xl p-6 shadow-sm">
           <h3 class="font-semibold text-xl mb-4">Send Message</h3>
-          <form action="https://formsubmit.co/info@solix-int.com" method="POST" id="contact-form" class="space-y-4">
-            <input type="hidden" name="_subject" value="Website Contact Message from Solix">
-            <input type="hidden" name="_next" value="https://www.solix-int.com#contact-success">
-            <input type="hidden" name="_captcha" value="false">
-            <input type="hidden" name="_template" value="table">
-            
+          <form action="https://formsubmit.co/Info@solix-int.com" method="POST" class="space-y-4">
+            <!-- FormSubmit Configuration -->
+            <input type="hidden" name="_next" value="https://bshalaby2346.github.io/solix-int-site/#contact" />
+            <input type="hidden" name="_subject" value="New Contact from Solix Website" />
+            <input type="hidden" name="_captcha" value="false" />>
             <div>
               <label class="form-label" for="name">Name *</label>
               <input class="form-input" type="text" id="name" name="name" required />
@@ -455,7 +457,7 @@
           </form>
           <div id="contact-success" class="hidden text-center py-6">
             <div class="inline-flex items-center justify-center w-12 h-12 rounded-full bg-green-100 text-green-700 mb-3"><i class="fas fa-check"></i></div>
-            <p class="text-slate-700">Message sent. We'll get back to you shortly.</p>
+            <p class="text-slate-700">Message sent. We’ll get back to you shortly.</p>
           </div>
         </div>
       </div>
@@ -511,7 +513,7 @@
   </footer>
 
   <!-- JS -->
-  <script src="js/main.js?v=20251003-8" defer></script>
-  <script src="js/utils.js?v=20251003-1" defer></script>
+  <script src="js/main-simple.js" defer></script>
+  <script src="js/utils.js" defer></script>
 </body>
 </html>
